--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11"
