--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "path": "^0.12.7",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.6.2"
