--- a/ios/VTestApp/Info.plist
+++ b/ios/VTestApp/Info.plist
@@ -48,5 +48,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+<array>
+  <string>FontAwesome.ttf</string>
+  <string>Ionicons.ttf</string>
+  <string>MaterialIcons.ttf</string>
+  <!-- Add other font files if needed -->
+</array>
 </dict>
 </plist>
