--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +31,7 @@
     "@react-native/typescript-config": "0.75.3",
     "@types/react": "^18.3.8",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
