--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
+    "@testing-library/react-native": "^12.7.2",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.8",
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
@@ -36,6 +38,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "jest-mock": "^29.7.0",
     "path": "^0.12.7",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
