--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "src/*": ["src/*"],
       "components": ["src/components"],
       "hooks/*": ["src/hooks/*"],
+      "navigation/*": ["src/navigation/*"],
       "screens": ["src/screens"],
       "services/*": ["src/services/*"],
       "utils/*": ["src/utils/*"],
