--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@types/axios": "^0.14.0",
@@ -18,6 +19,8 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0"
