--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-device-info": "^13.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-reanimated": "^3.15.3",
