--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "navigation/*": ["src/navigation/*"],
       "screens": ["src/screens"],
       "services/*": ["src/services/*"],
+      "store/*": ["src/store/*"],
       "styles/*": ["src/styles/*"],
       "utils/*": ["src/utils/*"],
     }
