--- a/ios/VTestApp/Info.plist
+++ b/ios/VTestApp/Info.plist
@@ -48,6 +48,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSFaceIDUsageDescription</key>
+    <string>This app uses Face ID to authenticate users securely.</string>
 	<key>UIAppFonts</key>
 <array>
   <string>FontAwesome.ttf</string>
