--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "./", 
     "paths": {
       "src/*": ["src/*"],
+      "context/*": ["src/context/*"],
       "components": ["src/components"],
       "hooks/*": ["src/hooks/*"],
       "navigation/*": ["src/navigation/*"],
