--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/react-native": "^12.7.2",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.7",
     "react": "18.3.1",
@@ -39,6 +40,7 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.8",
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
@@ -49,6 +51,7 @@
     "path": "^0.12.7",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
   },
   "engines": {
