--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "baseUrl": "./", 
     "paths": {
       "src/*": ["src/*"],
+      "types/*": ["types/*"],
+      "data/*": ["data/*"],
       "context/*": ["src/context/*"],
       "components": ["src/components"],
       "hooks/*": ["src/hooks/*"],
@@ -12,7 +14,7 @@
       "services/*": ["src/services/*"],
       "store/*": ["src/store/*"],
       "styles/*": ["src/styles/*"],
-      "utils/*": ["src/utils/*"],
+      "utils/*": ["src/utils/*"]
     }
   }
 }
