--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@testing-library/react-native": "^12.7.2",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.7",
+    "expo": "^51.0.0",
+    "expo-linear-gradient": "~13.0.2",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-biometrics": "^3.0.1",
