add: @grapp/stacks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./", 
     "paths": {
+      "@grapp/stacks": ["node_modules/@grapp/stacks"],
       "src/*": ["src/*"],
       "types/*": ["types/*"],
       "data/*": ["data/*"],
