add: grapp/stack, layout, screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "context/*": ["src/context/*"],
       "components": ["src/components"],
       "hooks/*": ["src/hooks/*"],
+      "layout": ["src/layout"],
       "navigation/*": ["src/navigation/*"],
       "screens": ["src/screens"],
       "services/*": ["src/services/*"],
