--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-native-device-info": "^13.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-mmkv": "^3.0.2",
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-unistyles": "^2.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
